--- a/Semantic_image_segmentation_unet.ipynb
+++ b/Semantic_image_segmentation_unet.ipynb
@@ -56,8 +56,8 @@
       "source": [
         "import os\n",
         "\n",
-        "input_dir = \"/gdrive/MyDrive/Colab Notebooks/victor/original images\"\n",
-        "target_dir = \"/gdrive/MyDrive/Colab Notebooks/victor/annotated images\"\n",
+        "input_dir = \"/gdrive/MyDrive/Colab Notebooks/original images\"\n",
+        "target_dir = \"/gdrive/MyDrive/Colab Notebooks/annotated images\"\n",
         "\n",
         "input_img_paths = sorted(\n",
         "    [os.path.join(input_dir, fname)\n",
