--- a/Semantic_image_segmentation_unet (1).ipynb
+++ b/Semantic_image_segmentation_unet (1).ipynb
@@ -197,7 +197,7 @@
         "model.compile(optimizer=\"rmsprop\", loss=\"sparse_categorical_crossentropy\")\n",
         "\n",
         "callbacks = [\n",
-        "    keras.callbacks.ModelCheckpoint(\"/gdrive/MyDrive/Colab Notebooks/victor/unet.keras\",\n",
+        "    keras.callbacks.ModelCheckpoint(\"/gdrive/MyDrive/Colab Notebooks/unet.keras\",\n",
         "                                    save_best_only=True)\n",
         "]\n",
         "\n",
